--- a/features/app-icons-guide.mdx
+++ b/features/app-icons-guide.mdx
@@ -1,6 +1,7 @@
 ---
 title: "App Icons & Splash Screens"
 description: "Create professional app icons and splash screens for your mobile app"
+icon: "image"
 ---
 
 <Tip>
