--- a/features/auth/google-auth.mdx
+++ b/features/auth/google-auth.mdx
@@ -5,7 +5,7 @@ icon: "google"
 ---
 
 <Warning>
-  **App Store Requirement**: Apple requires that if you implement any third-party authentication in your iOS app, you **must** also implement Apple Sign-In to pass App Store review. See our [Apple Sign-In guide](/features/auth/apple-auth).
+  **App Store Requirement**: If you implement Google Sign-In for iOS, Apple requires that you **must** also implement [Apple Sign-In](/features/auth/apple-auth) to pass the App Store review process. This is a mandatory requirement from Apple, not optional.
 </Warning>
 
 ## Prerequisites
