--- a/features/in-app-purchases/app-store-connect-setup.mdx
+++ b/features/in-app-purchases/app-store-connect-setup.mdx
@@ -7,9 +7,8 @@ description: "Create and configure your app in App Store Connect for in-app purc
 
 Before setting up your app in App Store Connect, make sure you have:
 
-- An Apple Developer account with paid enrollment
+- An Apple Developer account with paid enrollment ($99 per year)
 - Your app's bundle ID ready (from `app.json`)
-- Access to create and manage apps in App Store Connect
 
 ## Add iOS App to App Store Connect
 
