--- a/features/in-app-purchases/google-play-console-setup.mdx
+++ b/features/in-app-purchases/google-play-console-setup.mdx
@@ -7,9 +7,8 @@ description: "Create and configure your app in Google Play Console for in-app pu
 
 Before setting up your app in Google Play Console, make sure you have:
 
-- A Google Play Console developer account
+- A Google Play Console developer account (25$ one-time payment)
 - Your app's package name ready (from `app.json`)
-- Access to create and manage apps in Google Play Console
 
 ## Create your app in Google Play Console
 
