--- a/features/in-app-purchases/ios-products.mdx
+++ b/features/in-app-purchases/ios-products.mdx
@@ -42,7 +42,7 @@ Before creating iOS subscription products, make sure you have:
 
     ### Product Configuration
     - **Reference Name:** Internal name for App Store Connect reports (not visible to users), max 64 characters
-    - **Product ID:** Unique identifier used in development and with RevenueCat
+    - **Product ID:** Unique identifier used in development and with Superwall
       
     **Important:** Once used, Product IDs can never be reused across any app, even if deleted.
     
@@ -125,4 +125,3 @@ Before creating iOS subscription products, make sure you have:
 
 - [Apple In-App Purchase Documentation](https://developer.apple.com/in-app-purchase/)
 - [App Store Connect Help](https://help.apple.com/app-store-connect/)
-- [RevenueCat iOS Setup Guide](https://www.revenuecat.com/docs/getting-started/installation/ios)
