--- a/features/in-app-purchases/superwall-direct.mdx
+++ b/features/in-app-purchases/superwall-direct.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Superwall Direct Integration"
-description: "Set up Superwall directly with App Store and Google Play without RevenueCat"
+description: "Set up Superwall directly with App Store and Google Play"
 icon: "store"
 ---
 
