--- a/features/theme-customization.mdx
+++ b/features/theme-customization.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Theme Customization"
 description: "Learn how to customize your app's theme colors using the Tweakcn visual editor"
+icon: "palette"
 ---
 
 ## Overview
@@ -15,7 +16,7 @@ You can customize your app's theme colors using the Tweakcn Editor - a visual to
 
 <Steps>
   <Step title="Design in Tweakcn">
-    1. Open the [Tweakcn Editor](https://tweakcn.com/editor/theme?tab=ai)
+    1. Open the [TweakCN Editor](https://tweakcn.com/editor/theme?tab=ai)
     2. Use the AI chat or manually adjust colors
     3. Toggle between light/dark modes to test your theme
     4. Click `{ } Code` in the top right
