added onboarding, push notis with backend note, changed names of groups

--- a/features/onboarding-guide.mdx
+++ b/features/onboarding-guide.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Onboarding System"
+title: "Onboarding"
 description: "Customize the built-in onboarding experience to introduce users to your app's key features"
-icon: "presentation-screen"
+icon: "route"
 ---
 
 ## Overview
@@ -14,7 +14,7 @@ Your app comes with a template onboarding experience that introduces users to yo
 
 **Location:** `assets/onboarding/lotties/`
 
-We've included some free Lottie animations from [LottieFiles](https://lottiefiles.com/free-animations) to get you started. Replace these with animations that better match your app's theme.
+We've included some free Lottie animations from [LottieFiles](https://lottiefiles.com/free-animations) to get you started. Replace these with animations that better match **your** app.
 
 ### 2. Text Content
 
