--- a/features/app-icons-guide.mdx
+++ b/features/app-icons-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: "App Icons & Splash Screens"
+title: "App Icons"
 description: "Create professional app icons and splash screens for your mobile app"
 icon: "image"
 ---
